--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "antd": "^4.15.4",
+    "axios": "^0.21.1",
+    "babel-plugin-import": "^1.13.3",
+    "dotenv": "^9.0.0",
     "next": "10.2.0",
+    "next-plugin-antd-less": "^1.1.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^0.5.6",
+    "zustand": "^3.5.1"
+  },
+  "devDependencies": {
+    "next-compose-plugins": "^2.2.1"
   }
 }
