--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "next-on-netlify"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
@@ -15,6 +16,7 @@
     "babel-plugin-import": "^1.13.3",
     "dotenv": "^9.0.0",
     "next": "10.2.0",
+    "next-on-netlify": "^3.0.0",
     "next-plugin-antd-less": "^1.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
